src/objects/Email_Log__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Email_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Email Campaign</label>
        <referenceTo>EmailCampaign__c</referenceTo>
        <relationshipName>Email_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Template_Name__c</fullName>
        <label>Email Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sent_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>BLN Email Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ELOG-{0000}</displayFormat>
        <label>Email Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BLN Email Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>